# Echoes-of-the-Past

./: CMakeLists.txt  README.MD  build.sh
include/: Drawable.h  Furniture.h  Game.h  Room.h
res/: config.json
res/shaders/: room_shader.fs
src/: Drawable.cpp  Furniture.cpp  Game.cpp  Room.cpp  main.cpp
